logos/tests/snapshots/nat_tests__compare_nat_1_9.snap
---
source: tests/nat_tests.rs
expression: result
---
S(S(Z)) is less than S(S(S(Z))) by L-Succ {
};
