logos/tests/snapshots/nat_tests__compare_nat_3_12.snap
---
source: tests/nat_tests.rs
expression: result
---
S(S(Z)) is less than S(S(S(S(S(Z))))) by L-Trans {
  S(S(Z)) is less than S(S(S(Z))) by L-Succ {
  };
  S(S(S(Z))) is less than S(S(S(S(S(Z))))) by L-Trans {
    S(S(S(Z))) is less than S(S(S(S(Z)))) by L-Succ {
    };
    S(S(S(S(Z)))) is less than S(S(S(S(S(Z))))) by L-Succ {
    };
  };
};
