logos/tests/snapshots/nat_tests__compare_nat_3_13.snap
---
source: tests/nat_tests.rs
expression: result
---
S(S(Z)) is less than S(S(S(S(S(Z))))) by L-SuccSucc {
  S(Z) is less than S(S(S(S(Z)))) by L-SuccSucc {
    Z is less than S(S(S(Z))) by L-Zero {
    };
  };
};
