logos/tests/snapshots/nat_tests__nat_4.snap
---
source: tests/nat_tests.rs
expression: result
---
S(Z) plus S(S(S(Z))) is S(S(S(S(Z)))) by P-Succ {
  Z plus S(S(S(Z))) is S(S(S(Z))) by P-Zero {
  };
};
