logos/tests/snapshots/nat_tests__nat_8.snap
---
source: tests/nat_tests.rs
expression: result
---
S(S(Z)) times S(S(Z)) is S(S(S(S(Z)))) by T-Succ {
  S(Z) times S(S(Z)) is S(S(Z)) by T-Succ {
    Z times S(S(Z)) is Z by T-Zero {
    };
    S(S(Z)) plus Z is S(S(Z)) by P-Succ {
      S(Z) plus Z is S(Z) by P-Succ {
        Z plus Z is Z by P-Zero {
        };
      };
    };
  };
  S(S(Z)) plus S(S(Z)) is S(S(S(S(Z)))) by P-Succ {
    S(Z) plus S(S(Z)) is S(S(S(Z))) by P-Succ {
      Z plus S(S(Z)) is S(S(Z)) by P-Zero {
      };
    };
  };
};
